# Studies-Archive

Sem1/VVPE/: 4.docx  5.docx  LR_1.prt  LR_2.prt  LR_3.prt  LR_4.prt  LR_5.prt
Sem1/VVPE/ASSEMBLY/: ASSEMBLY.prt  Part1(Ismeritel).prt  Part13(Vint s cil.gol).prt  Part2(Kronshtein).prt  Part4(Shtift).prt  Part7(Rolik).prt
Sem3/Databases_Sem3/: Task2_1.txt  Task2_10.txt  Task2_11.txt  Task2_12.txt  Task2_15_2.sql  Task2_3.txt  Task2_4.txt  Task2_7.txt  Task2_8.txt  Task2_9.txt
Sem5/IT_Sem5/: Communication_Diagram.drawio  IT_Class_Diagram.drawio  PiAPS_Atta1.drawio  Sequence_Diagram.drawio  activity.drawio  component.drawio  deployment.drawio  state.drawio
Sem5/Java_Sem5/: .gitignore  pom.xml
Sem5/PBD_Sem5/: build.gradle  dsr_practice_backup_data_week4.sql  dsr_practice_backup_schema.sql
Sem5/PiAPS_Sem5/: Lab_10.vpp.bak_016d  Lab_10.vpp.bak_017d  Lab_10.vpp.bak_018f
Sem6/CPP_Sem6/Task2/: CMakeLists.txt
Sem6/CPP_Sem6/Task2/include/artifact/: Artifact.h  Bomb.h  Invisible.h  Slower.h
Sem6/CPP_Sem6/Task2/include/game/: Field.h  Game.h  Snake.h  SnakeStateNames.h
Sem6/CPP_Sem6/Task2/include/geometry/: Direction.h  Point.h
Sem6/CPP_Sem6/Task2/include/player/: Player.h  SimpleSurvivorBot.h
Sem6/CPP_Sem6/Task2/include/util/: Utils.h  symbols.h
Sem6/CPP_Sem6/Task2/src/: main.cpp
Sem6/CPP_Sem6/Task2/src/artifact/: Bomb.cpp  Invisible.cpp  Slower.cpp
Sem6/CPP_Sem6/Task2/src/game/: Field.cpp  Game.cpp  Snake.cpp
Sem6/CPP_Sem6/Task2/src/geometry/: Point.cpp
Sem6/CPP_Sem6/Task2/src/player/: SimpleSurvivorBot.cpp
Sem6/CPP_Sem6/Task2/tests/: tests.cpp
Sem6/Kursovaya_Sem6/: ~$рсовая Ячный.docx  Курсовая Ячный.docx  графики.xlsx
Sem7/AI_Sem7/: AI_Lab8.owx  AI_Lab9.pbix  Frame model.drawio  Lab5.lgp  Semantic net.drawio  Test Scores over Time (Tableau Public Schools.xlsx).xlsx
Sem8/AnS_Sem8/: boyer_mur.py  karp_rabin.py  kmp.py  shift_and.py  suffix_array.py  suffix_tree.py  z.py
Sem8/IB_Sem8/: lab1.py  lab2.py  lab4.py  lab5.py  lab6.py  text.txt
Sem8/RiAT_Sem8/: att2.docx
(+808 files in other folders)
